microservices/monitoring.yaml
kind: Service
apiVersion: v1
metadata:
  name: monitoring-istio-mesh
  namespace: istio-system
  annotations:
    prometheus.io/path: "/metrics"
    prometheus.io/port: "42422"
    prometheus.io/scrape: "true"
spec:
  ports:
  - name: prometheus
    port: 42422
    targetPort: 42422
  selector:
    istio: mixer
---
kind: Service
apiVersion: v1
metadata:
  name: monitoring-istio-envoy
  namespace: istio-system
  annotations:
    prometheus.io/path: "/stats/prometheus"
    prometheus.io/port: "15090"
    prometheus.io/scrape: "true"
spec:
  ports:
  - name: statsd-prom
    port: 15090
    targetPort: 15090
  selector:
    istio: mixer
---
kind: Service
apiVersion: v1
metadata:
  name: monitoring-istio-ingressgateway
  namespace: istio-system
  annotations:
    prometheus.io/path: "/stats/prometheus"
    prometheus.io/port: "15090"
    prometheus.io/scrape: "true"
spec:
  ports:
  - name: statsd-prom
    port: 15090
    targetPort: 15090
  selector:
    istio: ingressgateway
---
kind: Service
apiVersion: v1
metadata:
  name: monitoring-istio-egressgateway
  namespace: istio-system
  annotations:
    prometheus.io/path: "/stats/prometheus"
    prometheus.io/port: "15090"
    prometheus.io/scrape: "true"
spec:
  ports:
  - name: statsd-prom
    port: 15090
    targetPort: 15090
  selector:
    istio: egressgateway    
---
kind: Service
apiVersion: v1
metadata:
  name: monitoring-istio-mixer
  namespace: istio-system
  annotations:
    prometheus.io/path: "/metrics"
    prometheus.io/port: "9093"
    prometheus.io/scrape: "true"
spec:
  ports:
  - name: http-monitoring
    port: 9093
    targetPort: 9093
  selector:
    istio: mixer
---
kind: Service
apiVersion: v1
metadata:
  name: monitoring-istio-pilot
  namespace: istio-system
  annotations:
    prometheus.io/path: "/metrics"
    prometheus.io/port: "9093"
    prometheus.io/scrape: "true"
spec:
  ports:
  - name: http-monitoring
    port: 9093
    targetPort: 9093
  selector:
    istio: pilot
---
kind: Service
apiVersion: v1
metadata:
  name: monitoring-istio-galley
  namespace: istio-system
  annotations:
    prometheus.io/path: "/metrics"
    prometheus.io/port: "9093"
    prometheus.io/scrape: "true"
spec:
  ports:
  - name: http-monitoring
    port: 9093
    targetPort: 9093
  selector:
    istio: galley
