microservices/destination-policy-circuit-breaker.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: colorer-circuit-breaker
spec:
  host: colorer.featuredemo.svc.cluster.local
  subsets:
  - name: v1
    labels:
      app: colorer
    trafficPolicy:
      connectionPool:
        tcp:
          maxConnections: 100

#          httpConsecutiveErrors: 1
#          httpMaxRequestsPerConnection: 16          
#apiVersion: config.istio.io/v1alpha2
#kind: DestinationPolicy
#metadata:
#  name: colorer-circuit-breaker
#spec:
#  destination:
#    name: colorer
#    namespace: featureerr
#  circuitBreaker:
#    simpleCb:
#      maxConnections: 100
#      httpMaxPendingRequests: 1
#      httpMaxRequests: 1
#      sleepWindow: 3m
#      httpConsecutiveErrors: 1
#      httpDetectionInterval: 1s
#      httpMaxRequestsPerConnection: 16
#      httpMaxEjectionPercent: 100
#      httpMaxRetries: 3
