microservices/virtual-server.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: webui-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webui
spec:
  hosts:
  - "*"
  gateways:
  - webui-gateway
#  - mesh # applies to all the sidecars in the mesh
  http:
  - match:
    - uri:
        exact: /webui
    route:
    - destination:
        host: webui.master.svc.cluster.local
        port:
          number: 8080
